force-app/main/default/objects/AIUserSettings__c/AIUserSettings__c.object-meta.xml
<CustomObject>
    <description>Stores per-user access scope, platform feature gates, and personal usage limits for AI Assist. One record per User, editable via self-service where appropriate or restricted via permission set for admin-controlled fields.</description>
    <label>AI User Settings</label>
    <nameField>
        <displayFormat>AI User Settings - {00000}</displayFormat>
        <label>AI User Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>👤 AI User Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>