force-app/main/default/objects/AIUserSettings__c/fields/AllowedChannels__c.field-meta.xml
<CustomField>
    <fullName>AllowedChannels__c</fullName>
    <description>Which surfaces this user is permitted to access AI Assist from.</description>
    <inlineHelpText>Select which entry points this user can use to reach AI Assist.</inlineHelpText>
    <label>Allowed Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Page Chat</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Utility Bar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>