force-app/main/default/objects/AIUserSettings__c/fields/ConversationExportEnabled__c.field-meta.xml
<CustomField>
    <fullName>ConversationExportEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this user is permitted to use the built-in export feature to download a copy of a conversation.</description>
    <inlineHelpText>Turn this on to let this user download conversations. This does not control what a user can copy directly from the screen.</inlineHelpText>
    <label>Conversation Export Enabled</label>
    <type>Checkbox</type>
</CustomField>