force-app/main/default/objects/AIUserSettings__c/fields/ConversationVisibilityScope__c.field-meta.xml
<CustomField>
    <fullName>ConversationVisibilityScope__c</fullName>
    <description>Determines which other users&apos; conversations this user can view, beyond their own.</description>
    <inlineHelpText>Choose how much visibility this user has into other people&apos;s conversations. My Subordinates&apos; Conversations follows the role hierarchy. All Conversations should be reserved for admins or compliance reviewers.</inlineHelpText>
    <label>Conversation Visibility Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My Conversations Only</fullName>
                <default>true</default>
                <label>My Conversations Only</label>
            </value>
            <value>
                <fullName>My Subordinates&apos; Conversations</fullName>
            </value>
            <value>
                <fullName>All Conversations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>