force-app/main/default/objects/AIUserSettings__c/fields/DebugModeEnabled__c.field-meta.xml
<CustomField>
    <fullName>DebugModeEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Surfaces raw request and response detail, including Execution Step data, directly in the UI for this user.</description>
    <inlineHelpText>Intended for admins or developers testing configuration. Should not be enabled for general end users.</inlineHelpText>
    <label>Debug Mode Enabled</label>
    <type>Checkbox</type>
</CustomField>