force-app/main/default/objects/AIUserSettings__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this user currently has an AI Assist User Type assigned. Set to false when the user&apos;s type is removed, without deleting their saved configuration.</description>
    <inlineHelpText>Automatically maintained based on the user&apos;s AI Assist User Type. Do not edit manually.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>