force-app/main/default/objects/AIUserSettings__c/fields/MaxConcurrentConversations__c.field-meta.xml
<CustomField>
    <fullName>MaxConcurrentConversations__c</fullName>
    <description>The maximum number of Active conversations this user can have open at the same time, across all records.</description>
    <inlineHelpText>Set a cap on how many conversations this user can run simultaneously. Leave blank for no limit.</inlineHelpText>
    <label>Max Concurrent Conversations</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>