force-app/main/default/objects/AIUserSettings__c/fields/MaxConversationsPer24Hours__c.field-meta.xml
<CustomField>
    <fullName>MaxConversationsPer24Hours__c</fullName>
    <description>The maximum number of new conversations this user can start in a rolling 24-hour period.</description>
    <inlineHelpText>Set a cap on how many new sessions this user can start per day. Leave blank for no limit.</inlineHelpText>
    <label>Max Conversations Per 24 Hours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>