force-app/main/default/objects/AIUserSettings__c/fields/MaxTokensPer24Hours__c.field-meta.xml
<CustomField>
    <fullName>MaxTokensPer24Hours__c</fullName>
    <description>The maximum number of tokens this user can consume across all conversations in a rolling 24-hour period.</description>
    <inlineHelpText>Set a personal usage ceiling. Leave blank for no limit.</inlineHelpText>
    <label>Max Tokens Per 24 Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>