force-app/main/default/objects/AIUserSettings__c/fields/TermsAcknowledged__c.field-meta.xml
<CustomField>
    <fullName>TermsAcknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this user has acknowledged the AI Assist usage terms.</description>
    <inlineHelpText>Required before using AI Assist for the first time.</inlineHelpText>
    <label>Terms Acknowledged</label>
    <type>Checkbox</type>
</CustomField>