force-app/main/default/objects/AIUserSettings__c/fields/TermsAcknowledgedDate__c.field-meta.xml
<CustomField>
    <fullName>TermsAcknowledgedDate__c</fullName>
    <description>The date this user acknowledged the usage terms.</description>
    <inlineHelpText>Set automatically when Terms Acknowledged is checked.</inlineHelpText>
    <label>Terms Acknowledged Date</label>
    <type>DateTime</type>
</CustomField>