force-app/main/default/objects/AIUserSettings__c/fields/TermsVersionAcknowledged__c.field-meta.xml
<CustomField>
    <fullName>TermsVersionAcknowledged__c</fullName>
    <description>Which version of the usage terms this user agreed to.</description>
    <inlineHelpText>Compared against the current org-wide terms version to detect outdated consent.</inlineHelpText>
    <label>Terms Version Acknowledged</label>
    <length>20</length>
    <type>Text</type>
</CustomField>