force-app/main/default/objects/AIUserSettings__c/fields/UsageLimitReachedBehavior__c.field-meta.xml
<CustomField>
    <fullName>UsageLimitReachedBehavior__c</fullName>
    <description>Determines what happens when this user hits one of their usage limits.</description>
    <inlineHelpText>Choose how strictly usage limits should be enforced once reached.</inlineHelpText>
    <label>Usage Limit Reached Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Block New Messages</fullName>
            </value>
            <value>
                <fullName>Block New Conversations Only</fullName>
                <default>true</default>
                <label>Block New Conversations Only</label>
            </value>
            <value>
                <fullName>Notify Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>