force-app/main/default/objects/AIUserSettings__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user these settings apply to.</description>
    <inlineHelpText>Automatically set when the record is created.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AI User Settings</relationshipLabel>
    <relationshipName>AI_User_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>