force-app/main/default/objects/AIUserSettings__c/fields/WorkflowActionsEnabled__c.field-meta.xml
<CustomField>
    <fullName>WorkflowActionsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this user can see and trigger suggested Workflow Actions, or is restricted to read-only conversation with the Agent.</description>
    <inlineHelpText>Turn this off to limit this user to asking questions only, without the ability to trigger actions that change data.</inlineHelpText>
    <label>Workflow Actions Enabled</label>
    <type>Checkbox</type>
</CustomField>