force-app/main/default/objects/AIUserSettings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>ConversationVisibilityScope__c</columns>
    <columns>WorkflowActionsEnabled__c</columns>
    <columns>MaxConcurrentConversations__c</columns>
    <columns>MaxTokensPer24Hours__c</columns>
    <columns>UsageLimitReachedBehavior__c</columns>
    <columns>TermsAcknowledged__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>